fixed double scrollbar

--- a/csfes_page/honsai.css
+++ b/csfes_page/honsai.css
@@ -88,7 +88,6 @@ div {
 }
 
 body {
-  overflow-x: hidden;
   position: relative;
   margin: 0;
   width: 100%;
